Fixes overflow in pre tag

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -215,7 +215,9 @@ footer#post-footer a.notice {
       margin: 0 auto;
     }
   }
-z
+  .post pre{
+    overflow: auto;
+  }
   .post img {
     text-align: center;
   }
